feat: visits for student
